# ToDoAPI

./: .env  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/alembic/: env.py
api/app/: auth.py  config.py  crud.py  database.py  dependencies.py  errors.py  main.py  models.py
api/app/intrenal/: __init__.py  auth.py
api/app/routers/: groups.py  tasks.py  token.py  tokens.py  users.py
api/app/schemas/: auth.py  groups.py  tasks.py  users.py
