[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Muskelo <titanioman@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.37"
alembic = "^1.8.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
